# FoxerEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Documentation.md  EditorReadme.md  Events.md  FoxerEngine.sln  FoxerEngine.vcxproj  FoxerEngine.vcxproj.filters  FutureIdeas.md  NOTES.md  README.md  Repository.txt  Types.md  main.cpp  run-client-release.bat  run-client.bat  run-server-release.bat  run-server.bat
assets/: database.lua  settings.lua  strings.txt
assets/entities/: dummyTarget.lua  entity2.lua  floor.lua  ground.lua  groundRough.lua  player.lua  player1Win.lua  player2Win.lua  portal.lua  testEntity.lua  waitingPlayers.lua  youLose.lua  youWin.lua
assets/levels/: level.lua  level1.lua  mainmenu.lua
assets/meshes/: testMesh.lua
assets/scripts/: entity.lua  test.lua
assets/shaders/: simple_frag.glsl  simple_vert.glsl
assets/textures/: testTexture.lua
libs/box2d/: CMakeLists.txt
libs/easyprofiler/macos/: libeasy_profiler.dylib
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
sol/: sol.hpp
src/: AssetLoader.h  AssetManager.cpp  AssetManager.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  InputManager.cpp  InputManager.h  KeyHandler.cpp  KeyHandler.h  Logger.cpp  Logger.h  Managers.cpp  Managers.h  Mesh.h  Player.h  PlayerComponent.cpp  PlayerComponent.h  Settings.h  Shader.cpp  SoundManager.cpp  SoundManager.h  StringId.h  assert.h  gl_helper.hpp  level.cpp  level.h  main.cpp  vectors.h
src/entity/: Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/event/: Event.cpp  Event.h  EventDispatcher.h  EventHandler.cpp  EventHandler.h  EventListener.h  EventManager.cpp  EventManager.h  EventNetworkHandler.cpp  EventNetworkHandler.h
src/level/: Level.cpp  Level.h  LevelManager.cpp  LevelManager.h
src/network/: NetworkComponent.cpp  NetworkComponent.h  NetworkManager.cpp  NetworkManager.h
src/packets/: EntityPhysicsUpdateHandler.h  PhysicsUpdatePacket.h
src/physics/: PhysicsComponent.cpp  PhysicsComponent.h  PhysicsManager.cpp  PhysicsManager.h  PhysicsNetworkHandler.cpp  PhysicsNetworkHandler.h
src/render/: Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderComponent.cpp  RenderComponent.h  RenderManager.cpp  RenderManager.h  Shader.cpp  Shader.h  WindowWrapper.cpp  WindowWrapper.h
src/sound/: Clip.cpp  Clip.h  Sample.cpp  Sample.h  SoundManager.cpp  SoundManager.h
src/util/: StringId.h  Vectors.h  assert.h
